# betterls

./: .appveyor.yml  .clang-format  .clangd  .cmake-format.py  .eslintrc.js  .gitignore  .gitmodules  .gitpod.yml  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  .travis.yml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DartConfiguration.tcl  Dockerfile  Makefile  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  betterls.cpp  codecov.yml  colorls.cpp  colorls.h  colorls.hpp  colorls.sln  colorls.vcxproj  colorls.vcxproj.filters  config.yaml  index.html  license.md  old.Makefile  package.json  readme.md  requirements.txt  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: macos.yml  release.yml  ubuntu.yml  windows.yml
.trunk/: trunk.yaml
cmake/: CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  Utils.cmake  Vcpkg.cmake
hooks/: utils.py
include/: dirent.h  ryml.hpp
include/argh/: argh.h
include/betterls/: betterls.hpp  colors.hpp
include/fmt/: args.h  chrono.h  color.h  compile.h  format-inl.h  format.h  os.h  ostream.h  printf.h  ranges.h  xchar.h
include/rapidjson/: allocators.h  cursorstreamwrapper.h  document.h  encodedstream.h  encodings.h  filereadstream.h  filewritestream.h  fwd.h  istreamwrapper.h  memorybuffer.h  memorystream.h  ostreamwrapper.h  pointer.h  prettywriter.h  rapidjson.h  reader.h  schema.h  stream.h  stringbuffer.h  uri.h  writer.h
include/rapidjson/error/: en.h  error.h
include/rapidjson/msinttypes/: inttypes.h  stdint.h
lib/lua-5.4.4/: Makefile
lib/oof-second/: oof.h
scripts/: install-deps.ps1  install-deps.sh  platform.sh  prebuild.sh  version.js  version.sh
src/: CMakeLists.txt  Makefile  Project  args.h  args.hpp  betterls.cpp  betterls.hpp  color.cpp  color.h  color.hpp  colorls.cpp  colors.hpp  config.cpp  config.h  core.cpp  core.h  core.hpp  main.h  output.cpp  platform.h  ryml.cpp  version.h  version.h.in  yaml.cpp  yaml.h
test/: CMakeLists.txt  rapidjson.cpp  temp_test.cpp
tests/: test-ryml.cpp  test-ryml.h  test-termcolor.cpp  test.json  tests.h  yaml-cpp-check.cpp
